--- a/Tutorials/nbproject/project.properties
+++ b/Tutorials/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Tutorials
-main.class=t2q1.T2Q1
+main.class=Tutorial2.T2Q1
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
