--- a/Labs/nbproject/project.properties
+++ b/Labs/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=Labs
-main.class=labs.Labs
+main.class=Lab1.Labs
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
