--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,4 @@ replay_pid*
 /Tutorials/build/
 /Tutorials/T2Q1/nbproject/private/
 /Tutorials/src/Tutorial2/T2Q1/nbproject/private/
+/Tutorials/src/Tutorial2/T2Q1/build/
