--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,15 @@ replay_pid*
 /Tutorials/T2Q1/nbproject/private/
 /Tutorials/src/Tutorial2/T2Q1/nbproject/private/
 /Tutorials/src/Tutorial2/T2Q1/build/
+/Tutorials/src/Tutorial2/T2Q2/nbproject/private/
+/Tutorials/src/Tutorial2/T2Q2/build/
+/Tutorials/src/Tutorial2/T2Q3/nbproject/private/
+/Tutorials/src/Tutorial2/T2Q3/build/
+/Tutorials/src/Tutorial2/T2Q4/nbproject/private/
+/Tutorials/src/Tutorial2/T2Q4/build/
+/Tutorials/src/Tutorial2/T2Q5/nbproject/private/
+/Tutorials/src/Tutorial2/T2Q5/build/
+/Tutorials/src/Tutorial2/T2Q6/nbproject/private/
+/Tutorials/src/Tutorial2/T2Q6/build/
+/Tutorials/src/Tutorial2/T2Q7/nbproject/private/
+/Tutorials/src/Tutorial2/T2Q7/build/
