--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,7 @@ replay_pid*
 /Tutorials/src/Tutorial2/T2Q6/build/
 /Tutorials/src/Tutorial2/T2Q7/nbproject/private/
 /Tutorials/src/Tutorial2/T2Q7/build/
+/Labs/Lab2/nbproject/private/
+/Labs/L2Q1/nbproject/private/
+/Labs/Lab2/L2Q2/nbproject/private/
+/Labs/Lab2/L2Q1/nbproject/private/
