--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ replay_pid*
 /Labs/L2Q1/nbproject/private/
 /Labs/Lab2/L2Q2/nbproject/private/
 /Labs/Lab2/L2Q1/nbproject/private/
+/Labs/Lab2/L2Q1/build/
