--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,5 @@ replay_pid*
 /Labs/Lab2/L2Q1/nbproject/private/
 /Labs/Lab2/L2Q1/build/
 /Labs/Lab2/L2Q2/build/
+/Labs/Lab2/L2Q3/nbproject/private/
+/Labs/Lab2/L2Q3/build/
