--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,5 @@ replay_pid*
 /Labs/Lab2/L2Q2/build/
 /Labs/Lab2/L2Q3/nbproject/private/
 /Labs/Lab2/L2Q3/build/
+/Labs/Lab2/L2Q4/nbproject/private/
+/Labs/Lab2/L2Q4/build/
