--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,7 @@ replay_pid*
 /Labs/Lab2/L2Q3/build/
 /Labs/Lab2/L2Q4/nbproject/private/
 /Labs/Lab2/L2Q4/build/
+/Labs/Lab2/L2Q5/nbproject/private/
+/Labs/Lab2/L2Q5/build/
+/Labs/Lab2/L2Q6/nbproject/private/
+/Labs/Lab2/L2Q6/build/
